@@ -589,7 +589,7 @@ namespace format_v4 {
         }
         */
         data_out.stages[INTRO_STAGE] = 1;
-        data_out.stages[STAGE1] = 1;
+        data_out.stages[STAGE1] = 0;
         data_out.stages[STAGE2] = 1;
         data_out.stages[STAGE8] = 0;
         /*
